<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <AutoCompleteTextView
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:hint="@string/hint_add_partner_name"
            android:id="@+id/purchase_partner_name"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:id="@+id/purchase_product_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:visibility="gone"
            android:layout_margin="10dp"
            android:id="@+id/purchase_add_product_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/btn_name_add"
                android:id="@+id/purchase_add_product_btn"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <AutoCompleteTextView
                android:layout_weight="1"
                android:hint="@string/hint_add_item_name"
                android:id="@+id/purchase_item_name"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/purchase_quantity"
                    android:layout_weight="1"
                    android:hint="@string/hint_add_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/purchase_quantity_text"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:layout_gravity="center_vertical"
                    android:id="@+id/purchase_quantity_unit"
                    android:entries="@array/unit_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Spinner>

            </LinearLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/purchase_price"
                    android:hint="@string/hint_add_price"
                    android:layout_weight="0.5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/purchase_price_text"
                        android:inputType="numberDecimal"

                        android:maxLines="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/purchase_gst"
                android:hint="@string/hint_gst_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/purchase_gst_text"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <GridLayout
            android:orientation="horizontal"
            android:rowCount="3"
            android:columnCount="2"
            android:layout_margin="10dp"
            android:visibility="visible"
            android:background="@drawable/border"
            android:id="@+id/purchase_price_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/total_wo_gst"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/price_wo_gst"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/gst_amount"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/gst_amount"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/total_amount"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/total_amount"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </GridLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>