<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/layout_head_add_partner"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_partner_name_layout"
            android:hint="@string/hint_add_partner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_partner_name_text"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:layout_weight="0.5"
                android:id="@+id/spinner_partner_type"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:entries="@array/partner_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            </Spinner>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_partner_owner_layout"
            android:hint="@string/hint_add_partner_owner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_partner_owner_text"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_partner_address_layout"
            android:hint="@string/hint_add_partner_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_partner_address_text"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_partner_gst_layout"
            android:hint="@string/hint_add_partner_gst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_partner_gst_text"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_partner_contact_layout"
            android:hint="@string/hint_add_partner_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_partner_contact_text"
                android:inputType="phone"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <View
        android:background="@color/colorPrimary"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_add_partner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>

</LinearLayout>